--- a/app/templates/error/401.html
+++ b/app/templates/error/401.html
@@ -6,10 +6,9 @@
   {{ utils.flashed_messages() }}
   <br/>
   <div class="center-narrow">
-    <h1>AMIV Beerlog</h1>
+    <h1>Oops, that's an error!</h1>
     <br/>
-    <p>You have successfully been logged out.</p>
-    <a class="btn btn-default" role="button" href="{{ url_for('beerlog.home') }}">Login</a>
+    <p>Error 401: Authorization header missing! An API key is required to access this resource.</p>
   </div>
 </div>
 {% endblock %}
