--- a/app/templates/error/404.html
+++ b/app/templates/error/404.html
@@ -1,5 +1,4 @@
 {% import "bootstrap/utils.html" as utils %}
-{% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
 {% block body %}
 <div class="content-section">
@@ -7,9 +6,9 @@
   {{ utils.flashed_messages() }}
   <br/>
   <div class="center-narrow">
-    <h1>AMIV Beerlog</h1>
+    <h1>Oops, that's a error!</h1>
     <br/>
-    <p>You are not authorized to access this page.</p>
+    <p>Error 404: The page you are looking for could not be found.</p>
   </div>
 </div>
 {% endblock %}
