--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
     <title>{{ title }} | Beerlog | AMIV an der ETH</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{{ url_for('static', filename='css/bootstrap.3.3.7.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <script src="{{ url_for('static', filename='js/jquery.3.2.1.min.js') }}"></script>
