--- a/app/templates/beerlog/list.html
+++ b/app/templates/beerlog/list.html
@@ -1,4 +1,6 @@
 {% import "bootstrap/utils.html" as utils %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% from "bootstrap/pagination.html" import render_pagination %}
 {% extends "base.html" %}
 {% block body %}
 <div class="center">
@@ -29,7 +31,43 @@
     <br/>
     <h1>AMIV Beerlog Overview</h1>
     <br/>
-    <p>Here comes the list!</p>
+    <div>
+        <form class="form form-horizontal" method="get" role="form">
+            {{ wtf.form_field(filterform.date_from) }}
+            {{ wtf.form_field(filterform.date_to) }}
+            {{ wtf.form_field(filterform.organisation) }}
+            {{ wtf.form_field(filterform.product) }}
+            {{ wtf.form_field(filterform.submit) }}
+        </form>
+        <!-- {{ wtf.quick_form(filterform) }} -->
+    </div>
+    <div>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Organisation</th>
+                <th scope="col">Consumption</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for report in query_results.items %}
+                    <tr>
+                        <th scope="row">{{ first_position + loop.index }}</th>
+                        {% if report.user in users %}
+                            <td>{{ users[report.user] }}</td>
+                        {% else %}
+                            <td>{{ report.user }}</td>
+                        {% endif %}
+                        <td>{{ report.organisation }}</td>
+                        <td>{{ report.consumption }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {{render_pagination(query_results)}}
+    </div>
   </div>
 </div>
 {% endblock %}
